--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
-    "builds": [
-      {
-        "src": "src/index.js",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
-  
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
+}
